...
            android:paddingRight="4dp"
            android:paddingLeft="4dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/step_container">
            </FrameLayout>

        </ScrollView>

        <FrameLayout
            android:layout_width="match_parent"
...
                android:minHeight="60dp"
                android:clickable="true"
                android:onClick="pagination"
                android:contentDescription="@string/left_step"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/pagination_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:src="@drawable/ic_after"
                android:background="@color/colorPrimaryDark"
...
